# android-sqlite3

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
